--- a/реализация/index.html
+++ b/реализация/index.html
@@ -20,16 +20,36 @@
         </div>
     </header>
     <section>
+        <ul class="someClass">
+            <li>some shit text</li>
+            <li>some shit text</li>
+            <li>some shit text</li>
+            <li>some shit text</li>
+        </ul>
+    </section>
+    <section>
         <div class="container background text-center">
             <h2 class="section-title text-center">rappresent your life with a simple photo</h2>
             <p class="section-text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam velit est, ullamcorper a vestibulum eu, pulvinar ut orci. Donec gravida orci non suscipit consequat. Suspendisse ut dui sed tortor ultrices tempus. Phasellus dictum lectus ex, ut placerat massa pharetra at. Nullam felis dolor, volutpat nec congue eget, ornare vitae quam. In finibus urna vel molestie tempus. Duis et convallis odio, convallis porta eros. Curabitur vel leo turpis. Morbi consequat ante in odio varius hendrerit.
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam velit est, ullamcorper a vestibulum eu,
+                pulvinar ut orci. Donec gravida orci non suscipit consequat. Suspendisse ut dui sed tortor ultrices
+                tempus. Phasellus dictum lectus ex, ut placerat massa pharetra at. Nullam felis dolor, volutpat nec
+                congue eget, ornare vitae quam. In finibus urna vel molestie tempus. Duis et convallis odio, convallis
+                porta eros. Curabitur vel leo turpis. Morbi consequat ante in odio varius hendrerit.
             </p>
             <p class="section-text">
-                Vestibulum varius pretium mattis. Aliquam vulputate maximus est, quis euismod elit sodales placerat. Proin pretium arcu a odio consectetur, nec vestibulum nisi venenatis. Nulla eleifend nisi vel pretium aliquam. Cras ornare elementum vehicula. Curabitur at hendrerit nisl. Donec ligula mauris, commodo non diam et, aliquam aliquet lectus. Maecenas volutpat, nisl in consectetur condimentum, ligula mauris fringilla mauris, eu aliquet mauris ligula at orci. Cras efficitur non massa in auctor. Sed posuere leo quam, sed varius massa euismod sit amet. Proin vehicula egestas massa. Nullam tempus massa a elementum posuere. Nam ac velit ac purus vestibulum fringilla. Nunc a tortor posuere, ultrices nisi id, interdum risus. Donec laoreet tempus libero ut viverra. Proin dapibus magna vel urna ornare, et pretium metus facilisis.
+                Vestibulum varius pretium mattis. Aliquam vulputate maximus est, quis euismod elit sodales placerat.
+                Proin pretium arcu a odio consectetur, nec vestibulum nisi venenatis. Nulla eleifend nisi vel pretium
+                aliquam. Cras ornare elementum vehicula. Curabitur at hendrerit nisl. Donec ligula mauris, commodo non
+                diam et, aliquam aliquet lectus. Maecenas volutpat, nisl in consectetur condimentum, ligula mauris
+                fringilla mauris, eu aliquet mauris ligula at orci. Cras efficitur non massa in auctor. Sed posuere leo
+                quam, sed varius massa euismod sit amet. Proin vehicula egestas massa. Nullam tempus massa a elementum
+                posuere. Nam ac velit ac purus vestibulum fringilla. Nunc a tortor posuere, ultrices nisi id, interdum
+                risus. Donec laoreet tempus libero ut viverra. Proin dapibus magna vel urna ornare, et pretium metus
+                facilisis.i added many things
             </p>
-            <a href="#" class="button">get started</a>
-            
+            <a href="#" class="button">get srarted</a>
+
         </div>
     </section>
     <footer>
