--- a/реализация/index.html
+++ b/реализация/index.html
@@ -15,18 +15,13 @@
                 <li class="menu-item"><a href="#" class="menu-top-link">photoapp</a></li>
                 <li class="menu-item"><a href="#" class="menu-top-link">design</a></li>
                 <li class="menu-item"><a href="#" class="menu-top-link">download</a></li>
+                <li class="menu-item"><a href="#" class="menu-top-link">new</a></li>
+                <li class="menu-item"><a href="#" class="menu-top-link">new2222</a></li>
             </ul>
             <img src="img/top-img.jpg" alt="">
         </div>
     </header>
-    <section>
-        <ul class="someClass">
-            <li>some shit text</li>
-            <li>some shit text</li>
-            <li>some shit text</li>
-            <li>some shit text</li>
-        </ul>
-    </section>
+
     <section>
         <div class="container background text-center">
             <h2 class="section-title text-center">rappresent your life with a simple photo</h2>
@@ -37,7 +32,7 @@
                 congue eget, ornare vitae quam. In finibus urna vel molestie tempus. Duis et convallis odio, convallis
                 porta eros. Curabitur vel leo turpis. Morbi consequat ante in odio varius hendrerit.
             </p>
-            <p class="section-text">
+            <p class="section-title">
                 Vestibulum varius pretium mattis. Aliquam vulputate maximus est, quis euismod elit sodales placerat.
                 Proin pretium arcu a odio consectetur, nec vestibulum nisi venenatis. Nulla eleifend nisi vel pretium
                 aliquam. Cras ornare elementum vehicula. Curabitur at hendrerit nisl. Donec ligula mauris, commodo non
@@ -48,7 +43,7 @@
                 risus. Donec laoreet tempus libero ut viverra. Proin dapibus magna vel urna ornare, et pretium metus
                 facilisis.i added many things
             </p>
-            <a href="#" class="button">get srarted</a>
+            <a href="#" class="button">get started</a>
 
         </div>
     </section>
