--- a/реализация/index.html
+++ b/реализация/index.html
@@ -15,6 +15,10 @@
                 <li class="menu-item"><a href="#" class="menu-top-link">photoapp</a></li>
                 <li class="menu-item"><a href="#" class="menu-top-link">design</a></li>
                 <li class="menu-item"><a href="#" class="menu-top-link">download</a></li>
+                <ul>
+                    <li class="menu-item"><a href="#" class="menu-top-link">home</a></li>
+                    <li><button>add</button></li>
+                </ul>
             </ul>
             <img src="img/top-img.jpg" alt="">
         </div>
@@ -23,21 +27,21 @@
         <ul class="someClass">
             <li>some shit text</li>
             <li>some shit text</li>
-            <li>some shit text</li>
-            <li>some shit text</li>
+            <a href="#">point2</a>
+            <a href="#">point</a>
         </ul>
     </section>
     <section>
         <div class="container background text-center">
             <h2 class="section-title text-center">rappresent your life with a simple photo</h2>
-            <p class="section-text">
+            <p class="text-center">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam velit est, ullamcorper a vestibulum eu,
                 pulvinar ut orci. Donec gravida orci non suscipit consequat. Suspendisse ut dui sed tortor ultrices
                 tempus. Phasellus dictum lectus ex, ut placerat massa pharetra at. Nullam felis dolor, volutpat nec
                 congue eget, ornare vitae quam. In finibus urna vel molestie tempus. Duis et convallis odio, convallis
                 porta eros. Curabitur vel leo turpis. Morbi consequat ante in odio varius hendrerit.
             </p>
-            <p class="section-text">
+            <p class="text-center">
                 Vestibulum varius pretium mattis. Aliquam vulputate maximus est, quis euismod elit sodales placerat.
                 Proin pretium arcu a odio consectetur, nec vestibulum nisi venenatis. Nulla eleifend nisi vel pretium
                 aliquam. Cras ornare elementum vehicula. Curabitur at hendrerit nisl. Donec ligula mauris, commodo non
